--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,10 +26,10 @@
         </button>
         <div class="admin-dropdown-content">
           <a class="admin-link" routerLinkActive="active" [routerLink]="['/usuarios']">
-            <i class="fas fa-users"></i> Panel Usuarios
+            <i class="fas fa-users"></i> Admin. Usuarios
           </a>
           <a class="admin-link" routerLinkActive="active" [routerLink]="['/administrar']">
-            <i class="fas fa-tools"></i> Panel Admin
+            <i class="fas fa-tools"></i> Admin. Mascotas
           </a>
         </div>
       </div>
