--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
       <a class="nav-link" routerLinkActive="active" [routerLink]="['/faq']">
         <i class="fas fa-question-circle"></i> FAQ
       </a>
-      <a *ngIf="auth.isLoggedIn()" class="nav-link" routerLinkActive="active" [routerLink]="['/yo']">
+      <a *ngIf="auth.isLoggedIn()" class="nav-link" routerLinkActive="active" [routerLink]="['/perfilemocional']">
         <i class="fas fa-user-circle"></i> Perfil
       </a>
       
