--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,22 +18,25 @@
       <a *ngIf="auth.isLoggedIn()" class="nav-link" routerLinkActive="active" [routerLink]="['/yo']">
         <i class="fas fa-user-circle"></i> Perfil
       </a>
-      
+
       <!-- Menú desplegable para admin -->
       <div *ngIf="auth.isAdmin()" class="admin-dropdown">
         <button class="admin-dropbtn">
-          <i class="fas fa-user-cog"></i> Admin <i class="fas fa-chevron-down dropdown-icon"></i>
+          <i class="fas fa-user-cog"></i> Administar <i class="fas fa-chevron-down dropdown-icon"></i>
         </button>
         <div class="admin-dropdown-content">
           <a class="admin-link" routerLinkActive="active" [routerLink]="['/usuarios']">
-            <i class="fas fa-users"></i> Admin. Usuarios
+            <i class="fas fa-users"></i> Usuarios
           </a>
           <a class="admin-link" routerLinkActive="active" [routerLink]="['/administrar']">
-            <i class="fas fa-tools"></i> Admin. Mascotas
+            <i class="fas fa-tools"></i> Mascotas
+          </a>
+          <a class="admin-link" routerLinkActive="active" [routerLink]="['/adopciones']">
+            <i class="fas fa-heart"></i> Adopciones
           </a>
         </div>
       </div>
-      
+
       <button *ngIf="!auth.isLoggedIn()" class="login-btn" (click)="openLoginModal()">
         <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
       </button>
