--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -89,7 +89,12 @@
     <div class="pets-grid">
       <div class="pet-card" *ngFor="let mascota of mascotasDestacadas">
         <div class="pet-image">
-          <i class="fas" [ngClass]="mascota.especie === 'Gato' ? 'fa-cat' : 'fa-dog'"></i>
+          <ng-container *ngIf="mascota.imagen; else fallbackIcon">
+            <img [src]="'data:image/jpeg;base64,' + mascota.imagen" [alt]="mascota.nombre" />
+          </ng-container>
+          <ng-template #fallbackIcon>
+            <i class="fas" [ngClass]="mascota.especie === 'Gato' ? 'fa-cat' : 'fa-dog'"></i>
+          </ng-template>
           <div class="pet-badge">{{ mascota.perfil_emocional }}</div>
         </div>
         <div class="pet-info">
